--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv='refresh' content='0; URL=https://booksniffer.page.link/Zi7X'>
+  <meta http-equiv='refresh' content='0; URL=https://booksniffer.page.link/?link=https://booksniffer.com/?srch%3D1%26authorsearch%3Dsean%2Bhinn&apn=com.booksniffer.bksapp&isi=1524983177&ibi=com.booksniffer.bksapp&efr=1'>
 </head>
